# kylintest

./: README.md  kylinbot.sln
Debug/: kylinbot.ilk
kylinbot/: CMakeLists.txt  CMakeLists.txt~  kylinbot.cpp  kylinbot.h  kylinbot.vcxproj  main.cpp  main.cpp~  main.h  main.h~
kylinbot/Debug/: vc120.idb
kylinbot/Debug/kylinbot.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  kylinbot.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
